# tauri-plugin-android-battery-optimization

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/: BatteryOptimizationPlugin.kt
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_battery_optimization_status.toml  open_battery_settings.toml  request_battery_optimization_exemption.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs
